# libgpiod

./: .gitignore  configure.ac
bindings/: Makefile.am
bindings/cxx/: Makefile.am  chip.cpp  chip.hpp  error.cpp  error.hpp  event.cpp  event.hpp  gpiod-internal.hpp  line.cpp  line.hpp
src/daemon/: Makefile.am  gpioctld.c
